[package]
name = "mcpServerTest1"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
rmcp = { version = "0.7", features = ["server", "transport-streamable-http-server", "macros"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
