[package]
name = "mcpServerTest1"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
rmcp = { version = "1.3.0", features = ["server", "transport-streamable-http-server", "macros"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
non-exhaustive = { version="0.1.1" }

